--- a/style.css
+++ b/style.css
@@ -1,257 +1,1 @@
-html{
-    height : 100%;
-    width : 100%;
-    font-size: 10px;
-    box-sizing: border-box;
-    font-family: "Open Sans";
-    display : flex;
-    flex-direction : column;
-    * {
-        box-sizing: inherit;
-    }
-    color: #3C3F48;    
-    text-rendering: optimizeLegibility;
-    text-rendering: geometricPrecision;
-    font-smooth: always;
-
-    font-smoothing: antialiased;
-    -moz-font-smoothing: antialiased;
-    -webkit-font-smoothing: antialiased;
-    -webkit-font-smoothing: subpixel-antialiased;
-    box-sizing: border-box;
-}
-html *{
-    box-sizing: inherit;
-}
-
-body{
-    height : 100%;
-    width : 100%;
-    font-size: 1.3rem;
-    margin : 0;
-}
-
-.content{
-    display : flex;
-    flex-direction : column;
-}
-
-.blue{
-    color : #0DAFAC;
-}
-
-.gray{
-    color : #3C3F48;
-}
-
-.center{    
-    margin-left : auto;
-    margin-right : auto;
-}
-
-h1{
-    font-size: 4rem;
-    font-weight: bold;
-    text-align: center;
-    line-height: 5rem;
-    color: #3C3F48;
-    width : 100%;
-}
-
-.content > p{
-    font-size: 2rem;
-    text-align: center;
-    line-height: 3rem;
-    width : 100%;
-    max-width : 80rem;
-    margin-top : 1rem;
-    margin-bottom : 4rem;
-    color: #3C3F48;
-}
-
-button{    
-    background-color: #0DAFAC;
-    border-radius: 2px;
-    height: 4rem;
-    line-height: 4rem;
-    padding:0 2rem;
-    border:0;
-    outline:0;
-    color : #FFF;
-    font-weight: bold;
-    font-size: 1.4rem;
-    text-align: center;
-    cursor : pointer;
-    margin-top : 1rem;
-    margin-bottom : 1rem;
-}
-button > .arrow{
-    display: inline-block;
-    margin-left: 2rem;
-    font-size: 1rem;
-    float : right;
-}
-
-header{
-    display : flex;
-    padding : 2rem 20rem;   
-}
-
-.header-logo{
-    margin-right: auto;
-}
-
-
-
-
-.header-menu > li{
-    font-size: 1.6rem;
-    font-weight: 600;
-    text-align: center;
-    color: #3C3F48;
-    list-style: none;
-    display : inline-block;
-    width : 10rem;
-    cursor : pointer;
-}
-
-.block{
-    display : flex;
-    position : relative;
-    max-width: 120rem;
-    margin : 8rem auto;
-}
-
-.portrait{
-    background-image: url("assets/images/maxresdefault.jpg");
-    background-position: 80% 50%;
-    background-size: cover;
-    height : 55rem;
-    width : 55rem;
-    box-shadow: 0 1px 5px 0 rgba(0,0,0,0.5);
-    border-radius: 4px;
-    z-index: 1;
-}
-
-.citation-block{
-    margin-top : 6rem;
-    background: linear-gradient(203.37deg, #EEEEEE 0%, #FFFFFF 60%);
-    border-radius: 4px;
-    flex : 1;
-    padding : 8rem 2rem 2rem 6rem;
-    color: #3B3E48;
-}
-
-.citation{
-    font-size: 4.5rem;
-    font-weight: 300;
-    line-height: 6rem;
-    text-align: left;
-    letter-spacing: 0.5rem;
-    
-}
-.citation-block > p {
-    font-size: 1.8rem;
-    line-height: 3rem;
-    margin : 4rem 0;
-    font-weight: 300;
-    position : relative;
-  
-}
-
-.poets{
-    display : inline-block;
-    height : 3.5rem;
-    position : absolute;
-    top : 2.6rem;
-}
-
-.quote{
-    font-family: Merriweather;
-    font-size: 80px;
-    font-weight: 900;
-    line-height: 101px;
-    opacity : 0.5;
-    position : absolute;
-    left : 58rem;
-    top : 4rem;
-}
-
-.schools{
-    display: flex;
-    width : 100%;
-    max-width: 120rem;
-    margin-bottom: 4rem;
-    
-}
-.school{
-    max-width : 20%;
-    height : 8rem;
-    margin : 1rem auto;
-    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-    filter: grayscale(100%);
-    opacity: 0.5;
-}
-
-footer{
-    width : 100%;
-    background-color: #3B3E48;
-    color : #FFF;
-    padding : 4rem 8rem; 
-    display : flex;
-    font-size: 1.4rem;
-}
-.footer-column:first-of-type{
-    border-right : solid 1px #585D6E;
-    width : 60rem;
-    padding : 0 10rem;
-    margin-right: 4rem;
-}
-.footer-column{
-    padding : 0 2rem;
-    min-width: 15rem;
-}
-
-.footer-logo{
-    filter: contrast(0) brightness(100);
-    -webkit-filter: contrast(0) brightness(100);
-}
-
-.social-media{
-    width : 2rem;
-    height : 2rem;
-    cursor : pointer;
-    float : left;
-    filter: contrast(0) brightness(100);
-    -webkit-filter: contrast(0) brightness(100);
-    margin-right: 2rem;
-}
-
-.facebook{
-    margin-top: -0.5rem;
-    width : 3rem;
-    height : 3rem;
-    margin-right: 1rem;
-    
-}
-
-.footer-column > p {
-    font-weight: 300;
-    line-height: 3rem;
-}
-
-.footer-title{
-    font-size: 1.6rem;
-    font-weight: bold;
-    margin-bottom: 2rem;
-}
-.footer-column > ul{
-    margin : 0;
-    padding : 0;
-}
-.footer-column > ul > li{
-    list-style: none;
-    cursor : pointer;
-    font-weight: 300;  
-    line-height: 4rem;
-}
+body,html{width:100%;height:100%}html{font-family:'Open Sans';font-size:10px;font-smooth:always;box-sizing:border-box;color:#3c3f48;text-rendering:geometricPrecision;font-smoothing:antialiased;-moz-font-smoothing:antialiased;-webkit-font-smoothing:subpixel-antialiased}html *{box-sizing:inherit}body{font-size:1.3rem;margin:0}.content,html{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column}.content>p{font-size:2rem;line-height:3rem;width:100%;max-width:80rem;margin-top:1rem;margin-bottom:4rem;text-align:center}.blue{color:#0dafac}.content>p,.gray{color:#3c3f48}.center{margin-right:auto;margin-left:auto}button,h1{font-weight:700}h1{width:100%;text-align:center;font-size:4rem;line-height:5rem;color:#3c3f48}.header-menu>li,button{cursor:pointer;text-align:center}button{line-height:4rem;height:4rem;margin-top:1rem;margin-bottom:1rem;padding:0 2rem;border:0;border-radius:2px;outline:0;background-color:#0dafac;font-size:1.4rem;color:#fff}button .arrow{font-size:1rem;display:inline-block;float:right;margin-left:2rem}.block,header{display:-webkit-box;display:-ms-flexbox;display:flex}header{padding:2rem 20rem}.header-logo{margin-right:auto}.header-menu>li{font-size:1.6rem;font-weight:600;display:inline-block;width:10rem;list-style:none;color:#3c3f48}.block{position:relative;max-width:120rem;margin:8rem auto}.portrait{z-index:1;width:55rem;height:55rem;border-radius:4px;background-image:url(assets/images/maxresdefault.jpg);background-position:80% 50%;background-size:cover;box-shadow:0 1px 5px 0 rgba(0,0,0,.5)}.citation-block{margin-top:6rem;padding:8rem 2rem 2rem 6rem;color:#3b3e48;border-radius:4px;background:-webkit-linear-gradient(246.63deg,#eee 0%,#fff 60%);background:linear-gradient(203.37deg,#eee 0%,#fff 60%);-webkit-box-flex:1;-ms-flex:1;flex:1}.citation-block p{font-size:1.8rem;font-weight:300;line-height:3rem;position:relative;margin:4rem 0}.citation{font-size:4.5rem;font-weight:300;line-height:6rem;text-align:left;letter-spacing:.5rem}.poets,.quote{position:absolute}.poets{display:inline-block;height:3.5rem;top:2.6rem}.quote{font-family:Merriweather;font-size:80px;font-weight:900;line-height:101px;top:4rem;left:58rem;opacity:.5}.schools,footer{display:-webkit-box;display:-ms-flexbox;display:flex;width:100%}.schools{max-width:120rem;margin-bottom:4rem}.schools .school{max-width:20%;height:8rem;margin:1rem auto;opacity:.5;-webkit-filter:grayscale(100%);filter:grayscale(100%)}footer{font-size:1.4rem;padding:4rem 8rem;color:#fff;background-color:#3b3e48}.footer-column{min-width:15rem;padding:0 2rem}.footer-column:first-of-type{width:60rem;margin-right:4rem;padding:0 10rem;border-right:solid 1px #585d6e}.footer-column p{font-weight:300;line-height:3rem}.footer-column ul{margin:0;padding:0}.footer-column ul li{font-weight:300;line-height:4rem;list-style:none;cursor:pointer}.footer-logo,.social-media{filter:contrast(0) brightness(100);-webkit-filter:contrast(0) brightness(100)}.social-media{float:left;width:2rem;height:2rem;margin-right:2rem;cursor:pointer}.facebook{width:3rem;height:3rem;margin-top:-.5rem;margin-right:1rem}.footer-title{font-size:1.6rem;font-weight:700;margin-bottom:2rem}
