Animation first step

--- a/style.less
+++ b/style.less
@@ -1,3 +1,6 @@
+@clr-blue: #0DAFAC;
+@clr-text : #3C3F48;
+
 html{
     height : 100%;
     width : 100%;
@@ -9,7 +12,7 @@ html{
     * {
         box-sizing: inherit;
     }
-    color: #3C3F48;    
+    color: @clr-text;    
     text-rendering: optimizeLegibility;
     text-rendering: geometricPrecision;
     font-smooth: always;
@@ -29,6 +32,7 @@ body{
     width : 100%;
     font-size: 1.3rem;
     margin : 0;
+    overflow-x: hidden;
 }
 
 .content{
@@ -42,16 +46,16 @@ body{
         max-width : 80rem;
         margin-top : 1rem;
         margin-bottom : 4rem;
-        color: #3C3F48;
+        color: @clr-text;
     }
 }
 
 .blue{
-    color : #0DAFAC;
+    color : @clr-blue;
 }
 
 .gray{
-    color : #3C3F48;
+    color : @clr-text;
 }
 
 .center{    
@@ -64,13 +68,13 @@ h1{
     font-weight: bold;
     text-align: center;
     line-height: 5rem;
-    color: #3C3F48;
+    color: @clr-text;
     width : 100%;
 }
 
 
 button{    
-    background-color: #0DAFAC;
+    background-color: @clr-blue;
     border-radius: 2px;
     height: 4rem;
     line-height: 4rem;
@@ -94,7 +98,7 @@ button{
 
 header{
     display : flex;
-    padding : 2rem 20rem;   
+    padding : 2rem 10rem 5rem 20rem;   
 }
 
 .header-logo{
@@ -108,7 +112,7 @@ header{
     font-size: 1.6rem;
     font-weight: 600;
     text-align: center;
-    color: #3C3F48;
+    color: @clr-text;
     list-style: none;
     display : inline-block;
     width : 10rem;
@@ -139,7 +143,7 @@ header{
     border-radius: 4px;
     flex : 1;
     padding : 8rem 2rem 2rem 6rem;
-    color: #3B3E48;
+    color: @clr-text;
     p {
         font-size: 1.8rem;
         line-height: 3rem;
@@ -255,4 +259,158 @@ footer{
     font-size: 1.6rem;
     font-weight: bold;
     margin-bottom: 2rem;
+}
+
+@keyframes circle-1 {
+    0%   { right:-70rem; top:-70rem; }
+    100% { right:-35rem; top:-32rem; }
+}
+
+@keyframes circle-2 {
+    0%   { right:-56rem; top:-56rem; }
+    100% { right:-28rem; top:-25rem; }
+}
+
+@keyframes circle-3 {
+    0%   { right:-42rem; top:-42rem; }
+    100% { right:-21rem; top:-18rem; }
+}
+
+@keyframes circle-4 {
+    0%   { right:-30rem; top:-30rem; }
+    100% { right:-15rem; top:-12rem; }
+}
+
+@keyframes circle-5 {
+    0%   { right:-20rem; top:-20rem; }
+    100% { right:-10rem; top:-7rem; }
+}
+
+.circle{
+    border-radius: 50%;
+    border : solid 1px #9a9ba0;
+    box-shadow: 0 1px 5rem 0 rgba(0,0,0,0.2);
+    position : absolute;
+    opacity : 0.3;
+    top : -100%;
+    right : -100%;
+    &.first{
+        width : 70rem;
+        height : 70rem;   
+        animation-name: circle-1;
+        animation-duration: 2s;
+        animation-fill-mode: forwards;
+        box-shadow : none;
+    }
+    &.second{
+        width : 56rem;
+        height : 56rem;   
+        animation-fill-mode: forwards;
+        animation-name: circle-2;   
+        animation-duration: 2s; 
+    }
+    &.third{
+        width : 42rem;
+        height : 42rem;   
+        animation-fill-mode: forwards;
+        animation-name: circle-3;    
+        animation-duration: 2s;  
+    }
+    &.fourth{
+        width : 30rem;
+        height : 30rem;   
+        animation-fill-mode: forwards;
+        animation-name: circle-4; 
+        animation-duration: 2s;   
+    }
+    &.fifth{
+        width : 20rem;
+        height : 20rem;    
+        animation-fill-mode: forwards;
+        animation-name: circle-5;   
+        animation-duration: 2s;
+    }
+}
+
+.particle{
+    border-radius: 50%;
+    border : solid 1px @clr-blue;
+    width : 2rem;
+    height : 2rem;
+    display : flex;
+    position : absolute;
+    &.transparent{
+        opacity : 0.2;
+    }
+    &.gray{
+        border-color : @clr-text;
+    }
+    &.small{
+        width : 1.5rem;
+        height : 1.5rem;
+    }
+    &.large{
+        width : 3rem;
+        height : 3rem;
+    }
+    &.larger{
+        width : 4rem;
+        height : 4rem;
+    }
+    &.large-border{
+        border-width: 4px;
+    }
+    & > .particle{
+        margin : auto;
+        position : initial;
+    }
+}
+
+#particle-1{
+    top : 0;
+    right : 0;    
+    opacity : 0; 
+    transform: translateX(-12.5rem) translateY(6.5rem);
+    animation-fill-mode: forwards;
+    animation-name:  particle-1;   
+    animation-duration: 4s;
+    animation-delay: 2s;
+}
+#particle-2{
+    top : 0;
+    right : 0;    
+    opacity : 0; 
+    transform: translateX(-1rem) translateY(12rem);
+    animation-fill-mode: forwards;
+    animation-name:  particle-2;   
+    animation-duration: 5s;
+    animation-delay: 2s;
+}
+#particle-3{
+    top : 22rem;
+    right : 3rem;    
+}
+#particle-4{
+    top : 8rem;
+    right : 41rem;    
+}
+#particle-5{
+    top : 22rem;
+    right : 34rem;    
+}
+#particle-6{
+    top : 10rem;
+    right : 58rem;    
+}
+#particle-7{
+    top : 12rem;
+    right : 80rem;    
+}
+#particle-8{
+    top : 10rem;
+    right : 100rem;    
+}
+#particle-8{
+    top : 22rem;
+    right : 95rem;    
 }
