--- a/templates/header.html
+++ b/templates/header.html
@@ -1,4 +1,10 @@
-<header>
+<header id="header">
+    
+    <div class="circle first"></div>
+    <div class="circle second"></div>
+    <div class="circle third"></div>
+    <div class="circle fourth"></div>
+    <div class="circle fifth"></div>
    <img class="header-logo" src="assets/images/Logo.svg"/>
    <ul class="header-menu">
        <li>Product</li>
