--- a/style.less
+++ b/style.less
@@ -13,14 +13,8 @@ html{
         box-sizing: inherit;
     }
     color: @clr-text;    
-    text-rendering: optimizeLegibility;
-    text-rendering: geometricPrecision;
-    font-smooth: always;
-
-    font-smoothing: antialiased;
-    -moz-font-smoothing: antialiased;
     -webkit-font-smoothing: antialiased;
-    -webkit-font-smoothing: subpixel-antialiased;
+    -moz-osx-font-smoothing: grayscale;
     box-sizing: border-box;
 }
 html *{
@@ -119,7 +113,7 @@ header{
     left : 0;
     right : 0;
     height : 83rem;
-    background-image: radial-gradient(circle farthest-side at 100% 0 , rgba(255, 255, 255, 0), rgba(255, 255, 255, 0) 350px, rgba(255, 255, 255, 0.6) 450px, rgba(255, 255, 255, 0.8) 100%);
+    background-image: radial-gradient(circle farthest-side at 100% 0 , rgba(255, 255, 255, 0), rgba(255, 255, 255, 0) 350px, rgba(255, 255, 255, 0.2) 450px, rgba(255, 255, 255, 0.4) 100%);
     
 }
 
@@ -318,7 +312,7 @@ footer{
     opacity : 0.3;
     top : -100%;
     right : -100%;
-    z-index : -1;
+    z-index : -3;
     &.first{
         width : 70rem;
         height : 70rem;   
@@ -357,53 +351,36 @@ footer{
     }
 }
 
-@keyframes particle {
-    0%   { border-width : 1px }
-    15%   { border-width : 1px }
-    25% { border-width : 6px }
-    35% { border-width : 1px; }
-    100%   { border-width : 1px }
-}
 
 .particle{
     border-radius: 50%;
-    border : solid 1px @clr-blue;
-    width : 2rem;
-    height : 2rem;
+    border-style: solid;
+    border-color : @clr-blue;
+    width : 0;
+    height : 0;
     display : flex;
     position : absolute;
     z-index : -2;  
-    top : -1rem;
-    right : -1rem;
-    animation: particle ease-in-out 5s infinite;   
+    overflow : visible;
+    box-sizing: content-box;
     
-    &.transparent{
-        opacity : 0.2;
-    }
     &.gray{
         border-color : #5d5e63;
     }
-    &.small{
-        width : 1.2rem;
-        height : 1.2rem;
-        top : -0.6rem;
-        right : -0.6rem;
-    }
-    &.large{
-        width : 3rem;
-        height : 3rem;
-        top : -1.5rem;
-        right : -1.5rem;
-    }
-    &.larger{
-        width : 4rem;
-        height : 4rem;
-    }
-    
+   
     & > .particle{
         margin : auto;
-        position : initial;
+        width : 100%;
+        height : 100%;
+        box-sizing: border-box;
+        position : relative;
         animation: none;
-        border-width: 6px;
+        opacity : 1;
+        border-color: transparent; 
+        border-style: none;
+        background : @clr-blue;
+        &.gray{
+            background : #5d5e63;
+        }
     }
 }
