--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,7 +3,7 @@
     <div class="footer-column">
         <img class="footer-logo" src="assets/images/Logo.svg"/>
         <p>
-            Marketers/advertisers usually focus their efforts on the people responsible for making the purchase. 
+            Marketers/advertisers usually focus their efforts on the people responsible for making the purchase. <br/>
             Copyright © 2017, Shipped from Monaco, FRA.
         </p>
     </div>
@@ -42,9 +42,9 @@
     </div>
     <div class="footer-column">
         <div class="footer-title">Contact us</div>
-        <img src="assets/images/facebook.png" class="social-media facebook"/>
-        <img src="assets/images/twitter.png" class="social-media"/>
-        <img src="assets/images/linkedin.png" class="social-media"/>
+        <span class="icon icon-facebook social-media"></span>
+        <span class="icon icon-twitter social-media"></span>
+        <span class="icon icon-linkedin2 social-media"></span>
     </div>
 
 </footer>
