--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,50 +1,51 @@
-
 <footer>
-    <div class="footer-column">
-        <img class="footer-logo" src="assets/images/Logo.svg"/>
-        <p>
-            Marketers/advertisers usually focus their efforts on the people responsible for making the purchase. <br/>
-            Copyright © 2017, Shipped from Monaco, FRA.
-        </p>
-    </div>
-    <div class="footer-column">
-        <div class="footer-title">Using Twic</div>
-        <ul>
-            <li>Product</li>
-            <li>Pricing</li>
-            <li>Support</li>
-            <li>Guides</li>
-        </ul>
-    </div>
-    <div class="footer-column">
-        <div class="footer-title">Twic</div> 
-        <ul>
-            <li>About</li>
-            <li>Partners</li>
-            <li>Blog</li>
-        </ul>
-    </div>
-    <div class="footer-column">
-        <div class="footer-title">Legal</div>
-        <ul>
-            <li>Privacy</li>
-            <li>Security</li>
-            <li>Terms of service</li>
-        </ul>
-    </div>
-    <div class="footer-column">
-        <div class="footer-title">Handy links</div>
-        <ul>
-            <li>Download App</li>
-            <li>Status</li>
-            <li>FERPA and WCAG</li>
-        </ul>
-    </div>
-    <div class="footer-column">
-        <div class="footer-title">Contact us</div>
-        <span class="icon icon-facebook social-media"></span>
-        <span class="icon icon-twitter social-media"></span>
-        <span class="icon icon-linkedin2 social-media"></span>
+    <div class="footer-content">
+        <div class="footer-column">
+            <img class="footer-logo" src="assets/images/Logo.svg"/>
+            <p>
+                Marketers/advertisers usually focus their efforts on the people responsible for making the purchase. <br/>
+                Copyright © 2017, Shipped from Monaco, FRA.
+            </p>
+        </div>
+        <div class="footer-column">
+            <div class="footer-title">Using Twic</div>
+            <ul>
+                <li>Product</li>
+                <li>Pricing</li>
+                <li>Support</li>
+                <li>Guides</li>
+            </ul>
+        </div>
+        <div class="footer-column">
+            <div class="footer-title">Twic</div> 
+            <ul>
+                <li>About</li>
+                <li>Partners</li>
+                <li>Blog</li>
+            </ul>
+        </div>
+        <div class="footer-column">
+            <div class="footer-title">Legal</div>
+            <ul>
+                <li>Privacy</li>
+                <li>Security</li>
+                <li>Terms of service</li>
+            </ul>
+        </div>
+        <div class="footer-column">
+            <div class="footer-title">Handy links</div>
+            <ul>
+                <li>Download App</li>
+                <li>Status</li>
+                <li>FERPA and WCAG</li>
+            </ul>
+        </div>
+        <div class="footer-column">
+            <div class="footer-title">Contact us</div>
+            <span class="icon icon-facebook social-media"></span>
+            <span class="icon icon-twitter social-media"></span>
+            <span class="icon icon-linkedin2 social-media"></span>
+        </div>
     </div>
 
 </footer>
