--- a/src/styles.less
+++ b/src/styles.less
@@ -95,6 +95,15 @@ button{
         float : right;
         font-family: cursive;
         font-size: 1.5rem;
+        transition : margin 50ms ease-in; 
+        
+    }
+    &:hover{
+        background : #1EBAB7;
+        box-shadow: inset 0px 1px 2px 0px rgba(217,217,217,1);
+        .arrow{
+            margin: -1px 0.3rem 0 1.7rem;
+        }
         
     }
 }
