--- a/src/app/shared/footer/footer.component.less
+++ b/src/app/shared/footer/footer.component.less
@@ -17,11 +17,20 @@
 }
 
 .footer-column{
-    padding : 0 2rem;
+    padding : 0 1rem;
+    flex : 1 0 auto;
     &:first-of-type{
         border-right : solid 1px #585D6E;
-        width : 60rem;
-        margin-right: 4rem;
+        width : 46rem;
+        margin-right: 2rem;
+    }
+    
+    
+    .footer-title{
+        font-size: 1.6rem;
+        line-height: 2.2rem;
+        font-weight: bold;
+        margin-bottom: 2rem;
     }
     
     ul{
@@ -51,8 +60,3 @@
 }
 
 
-.footer-title{
-    font-size: 1.6rem;
-    font-weight: bold;
-    margin-bottom: 2rem;
-}
