--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div app-planetarium 
-     [radius]="[370, 290, 210, 150, 100]" 
+     [circles]="circles" 
      [center]="[0, 50]" [nbParticles]="15" 
      [size]="[0,800]"
      ></div>
