--- a/src/app/shared/footer/footer.component.less
+++ b/src/app/shared/footer/footer.component.less
@@ -4,7 +4,10 @@
     width : 100%;
     background-color: #3B3E48;
     color : #FFF;
-    padding : 4rem 8rem; 
+    padding : 5rem 8rem; 
+    @media(max-width : 1100px){
+        padding : 5rem 1rem;
+    }
     font-size: 1.4rem;
     font-weight: 300;
     line-height: 3rem;
@@ -23,6 +26,10 @@
         border-right : solid 1px #585D6E;
         width : 46rem;
         margin-right: 2rem;
+        @media(max-width : 1100px){
+            width : 26rem;
+            padding-right: 4rem;
+        }
     }
     
     
