--- a/src/app/shared/header/header.component.less
+++ b/src/app/shared/header/header.component.less
@@ -3,10 +3,11 @@
 :host{
     display : flex;  
     max-width: 110rem;
-    margin : 3rem auto 0 auto;
+    margin : 3rem 1.5rem 0;
     
     .header-logo{
         margin-right: auto;
+        margin-left : 1rem;
     }
 
     .header-menu{
