--- a/src/app/shared/planetarium/planetarium.component.less
+++ b/src/app/shared/planetarium/planetarium.component.less
@@ -13,12 +13,11 @@
 }
 
 
-.circle-center{
+.circle{
     border-radius: 50%;
-    border : solid 1px #9a9ba0;
-    box-shadow: 0 1px 4rem 0 rgba(0,0,0,0.4);
+    border : solid 1px rgba(226,226,226, 1);
     position : absolute;
-    opacity : 0.3;
+    opacity : 1;
     z-index : -3;
     transition : top 2s, right 2s;
 }
