--- a/src/styles.less
+++ b/src/styles.less
@@ -39,6 +39,9 @@ body{
     width : 100%;
     max-width : 110rem;
     margin : 0 auto;
+    @media(max-width : 1100px){
+        padding : 0 1rem;
+    }
      p{
         text-align: center;
         display : block;
