--- a/src/app/shared/header/header.component.less
+++ b/src/app/shared/header/header.component.less
@@ -3,8 +3,8 @@
 :host{
     display : flex;  
     max-width: 110rem;
-    margin : 3rem 1.5rem 0;
-    
+    margin : 3rem auto 0 auto;
+    padding : 0 1rem;
     .header-logo{
         margin-right: auto;
         margin-left : 1rem;
@@ -20,7 +20,7 @@
             color: @clr-text;
             list-style: none;
             display : inline-block;
-            margin : 0 1.5rem;
+            margin-right : 2.5rem;
             cursor : pointer;
         }
     } 
