--- a/src/app/shared/planetarium/planetarium.component.less
+++ b/src/app/shared/planetarium/planetarium.component.less
@@ -16,6 +16,7 @@
 .circle{
     border-radius: 50%;
     border : solid 1px rgba(226,226,226, 1);
+    box-shadow: -5px 5px 30px 0px rgba(0,0,0,0.1);
     position : absolute;
     opacity : 1;
     z-index : -3;
